syntax = "proto3";

package book.api;

option go_package = "gitlab.ozon.dev/ArtoriasAbW/homework-01/pkg/api;api";

service Book {
    rpc BookGet(BookGetRequest) returns (BookGetResponse) {}
    rpc BookCreate(BookCreateRequest) returns (BookCreateResponse) {}
    rpc BookList(BookListRequest) returns (BookListResponse) {}
    rpc BookUpdate(BookUpdateRequest) returns (BookUpdateResponse) {}
    rpc BookDelete(BookDeleteRequest) returns (BookDeleteResponse) {}
}

// ---------------------------------------------------------------------------------------------------------------------
// BookCreate endpoint messages
// ---------------------------------------------------------------------------------------------------------------------

message BookGetRequest {
    uint64 id = 1;
}

message BookGetResponse {
    string title = 1;
    string author = 2;
    bool unread = 3;
}

// ---------------------------------------------------------------------------------------------------------------------
// BookCreate endpoint messages
// ---------------------------------------------------------------------------------------------------------------------

message BookCreateRequest {
    string title = 1;
    string author = 2;
    bool unread = 3;
}

message BookCreateResponse {}

// ---------------------------------------------------------------------------------------------------------------------
// BookList endpoint messages
// ---------------------------------------------------------------------------------------------------------------------

message BookListRequest {}

message BookListResponse {
    repeated Book books = 1;

    message Book {
        uint64 id = 1;
        string title = 2;
        string author = 3;
        bool unread = 4;
    }
}

// ---------------------------------------------------------------------------------------------------------------------
// BookUpdate endpoint messages
// ---------------------------------------------------------------------------------------------------------------------

message BookUpdateRequest {
    uint64 id = 1;
    string title = 2;
    string author = 3;
    bool unread = 4;
}
message BookUpdateResponse {}

// ---------------------------------------------------------------------------------------------------------------------
// BookDelete endpoint messages
// ---------------------------------------------------------------------------------------------------------------------

message BookDeleteRequest {
    uint64 id = 1;
}

message BookDeleteResponse {}
